--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@
 
 %Include Objective
 \newif\ifobjective
-\objectivetrue
+\objectivefalse
 
 %Include High School Info
 \newif\ifhighschool
@@ -78,7 +78,7 @@
 
   C-1/904, Bramha Majestic & +91 9960838580 (cell)\\
   NIBM Road, Kondhwa & adnan.shaikh1806@gmail.com \\
-  Pune, MH & 18th June 1995\\
+  Pune, MH, India & 18th June 1995\\
   411048 & http://www.adnanshaikh.com/\\
 \end{tabular*}
 
@@ -92,12 +92,29 @@
 \end{itemize}
 \fi
 
+\resheading{Work Experience}
+\begin{itemize}
+\item
+  \ressubheading{Persistent Systems}{Pune, MH}{Academic Intern}{Aug. 2016 - Dec. 2016}
+  \begin{itemize}
+    \resitem{Worked on an agent-less solution for Accelerite's real time end point detection and response solution dubbed Sentient, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
+    \resitem{Implemented various queries as per the design specification.}
+  \end{itemize}
+\item
+  \ressubheading{Persistent Systems}{Pune, MH}{Summer Intern}{Jun. 2015 - Aug. 2015}
+  \begin{itemize}
+    \resitem{Extended Python 3 by providing support for Devanagari numbers and various Unicode math characters.}
+    \resitem{The modified CPython source is capable of doing math in Devanagari numbers and supports math operators in Unicode like union, intersection, subset, etc.}
+    \resitem{Repo Link: github.com/rusimody/l10Python}
+  \end{itemize}
+\end{itemize}
+
 \resheading{Education}
 \begin{itemize}
 \item
-  \ressubheading{Vishwakarma Institute of Technology}{Pune, MH}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - Expected May 2017}
+  \ressubheading{Vishwakarma Institute of Technology}{Pune, MH}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
   \begin{itemize}
-    \resitem{Current CPI: 7.93}
+    \resitem{Current CPI: 8.03}
   \end{itemize}
   \ifhighschool	
 \item
@@ -111,24 +128,6 @@
     \resitem{CGPA: 8.6}
   \end{itemize}
   \fi
-\end{itemize}
-
-\resheading{Work Experience}
-\begin{itemize}
-\item
-  \ressubheading{Persistent Systems}{Pune, MH}{Academic Intern}{Aug. 2016 - Present}
-  \begin{itemize}
-    \resitem{Implemented an agent-less solution for Accelerite's real time end point detection and response solution dubbed Sentient, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
-    \resitem{Increased query throughput by implementing a thread safe cache to reduce authentication requests.}
-    \resitem{Implemented various queries as per the design specification.}
-  \end{itemize}
-\item
-  \ressubheading{Persistent Systems}{Pune, MH}{Summer Intern}{Jun. 2015 - Aug. 2015}
-  \begin{itemize}
-    \resitem{Extended Python 3 by providing support for Devanagari numbers and various Unicode math characters.}
-    \resitem{The modified CPython source is capable of doing math in Devanagari numbers and supports math operators in Unicode like union, intersection, subset, etc.}
-    \resitem{Repo Link: github.com/rusimody/l10Python}
-  \end{itemize}
 \end{itemize}
 
 \ifhighschool
