Changed Current CPI to CPI

--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
 \item
   \ressubheading{Vishwakarma Institute of Technology}{Pune, MH}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
   \begin{itemize}
-    \resitem{Current CPI: 8.03}
+    \resitem{CPI: 8.03}
   \end{itemize}
   \ifhighschool	
 \item
