--- a/resume.tex
+++ b/resume.tex
@@ -1,202 +1,213 @@
 \documentclass[letterpaper,12pt]{article}
 
-%-----------------------------------------------------------
-\usepackage[empty]{fullpage}
-\usepackage{color}
-\usepackage[document]{ragged2e}
-\usepackage{textcomp}
-\definecolor{mygrey}{gray}{0.80}
-\raggedbottom
-\raggedright
-\setlength{\tabcolsep}{0in}
-
-% Adjust margins to 0.5in on all sides
-\addtolength{\oddsidemargin}{-0.5in}
-\addtolength{\evensidemargin}{-0.5in}
-\addtolength{\textwidth}{1.0in}
-\addtolength{\topmargin}{-0.5in}
-\addtolength{\textheight}{1.0in}
-
-%-----------------------------------------------------------
-%Custom commands
-\newcommand{\ts}{\textsuperscript}
-\def\CC{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++ }}}
-\newcommand{\resitem}[1]{\item #1 \vspace{-2pt}}
-\newcommand{\resheading}[1]{{\large \colorbox{mygrey}{\begin{minipage}{\textwidth}{\textbf{#1 \vphantom{p\^{E}}}}\end{minipage}}}}
-\newcommand{\ressubheading}[4]{
-  \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
-    \textbf{#1} & #2 \\
-    \textit{#3} & \textit{#4} \\
-  \end{tabular*}\vspace{-6pt}}
-\newcommand{\resprojectsubheading}[2]{
-  \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
-    \textbf{#1} & \textit{#2} \\
-  \end{tabular*}\vspace{-6pt}}
-%-----------------------------------------------------------
-
-%-----------------------------------------------------------
-%Variable declarations
-
-%Include High School Info
-\newif\ifhighschool
-%\highschooltrue
-
-%Include Not So Imp
-\newif\ifincludenotsoimp
-\includenotsoimptrue
-
-%Include Skills
-\newif\ifskills
-%\skillstrue
-\skillsfalse
-
-%Include Leadership Info
-\newif\ifleadership
-\leadershiptrue
-
-%Include One Page
-\newif\ifonepage
-%\onepagetrue
-
-\ifonepage
-\objectivefalse
-\highschoolfalse
-\includenotsoimpfalse
-\skillsfalse
-\leadershipfalse    
-\fi
-%-----------------------------------------------------------
-
-\begin{document}
-
-\begin{center}
-  \textbf{\Large Adnan Shaikh}
-\end{center}
-
-\begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-
-  C-1/904, Bramha Majestic & +91 9960 838 580 (mobile)\\
-  NIBM Road, Kondhwa & adnan.shaikh1806@gmail.com \\
-  Pune, MH, India & June 18, 1995\\
-  411048 & www.adnanshaikh.com\\
-\end{tabular*}
-
-\vspace{0.1in}
-
-\resheading{Work Experience}
-\begin{itemize}
-\item
-  \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Present}
+  %-----------------------------------------------------------
+  \usepackage[empty]{fullpage}
+  \usepackage{color}
+  \usepackage[document]{ragged2e}
+  \usepackage{textcomp}
+  \definecolor{mygrey}{gray}{0.80}
+  \raggedbottom
+  \raggedright
+  \setlength{\tabcolsep}{0in}
+  
+  % Adjust margins to 0.5in on all sides
+  \addtolength{\oddsidemargin}{-0.5in}
+  \addtolength{\evensidemargin}{-0.5in}
+  \addtolength{\textwidth}{1.0in}
+  \addtolength{\topmargin}{-0.5in}
+  \addtolength{\textheight}{1.0in}
+  
+  %-----------------------------------------------------------
+  %Custom commands
+  \newcommand{\ts}{\textsuperscript}
+  \def\CC{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++ }}}
+  \newcommand{\resitem}[1]{\item #1 \vspace{-2pt}}
+  \newcommand{\resheading}[1]{{\large \colorbox{mygrey}{\begin{minipage}{\textwidth}{\textbf{#1 \vphantom{p\^{E}}}}\end{minipage}}}}
+  \newcommand{\ressubheading}[4]{
+    \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & #2 \\
+      \textit{#3} & \textit{#4} \\
+    \end{tabular*}\vspace{-6pt}}
+  \newcommand{\resprojectsubheading}[2]{
+    \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & \textit{#2} \\
+    \end{tabular*}\vspace{-6pt}}
+  %-----------------------------------------------------------
+  
+  %-----------------------------------------------------------
+  %Variable declarations
+  
+  %Include High School Info
+  \newif\ifhighschool
+  %\highschooltrue
+  
+  %Include Not So Imp
+  \newif\ifincludenotsoimp
+  \includenotsoimptrue
+  
+  %Include Skills
+  \newif\ifskills
+  %\skillstrue
+  \skillsfalse
+  
+  %Include Leadership Info
+  \newif\ifprojects
+  %\projectstrue
+  \projectsfalse
+  
+  %Include Leadership Info
+  \newif\ifleadership
+  %\leadershiptrue
+  \leadershipfalse
+  
+  %Include One Page
+  \newif\ifonepage
+  %\onepagetrue
+  
+  \ifonepage
+  \objectivefalse
+  \highschoolfalse
+  \includenotsoimpfalse
+  \skillsfalse
+  \leadershipfalse    
+  \fi
+  %-----------------------------------------------------------
+  
+  \begin{document}
+  
+  \begin{center}
+    \textbf{\Large Adnan Shaikh}
+  \end{center}
+  
+  \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
+  
+    C-1/904, Bramha Majestic & +91 9960 838 580 (mobile)\\
+    NIBM Road, Kondhwa & adnan.shaikh1806@gmail.com \\
+    Pune, MH, India & June 18, 1995\\
+    411048 & www.adnanshaikh.com\\
+  \end{tabular*}
+  
+  \vspace{0.1in}
+  
+  \resheading{Work Experience}
   \begin{itemize}
-    \resitem{Worked in an agile team using Scrum methodologies.}
-    \resitem{Worked on porting Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint.}
-    \resitem{Converted the client from a console application to a Win32 service.}
-    \resitem{Designed and wrote a thread safe logger to speed up debugging in service mode.}
-    \resitem{Modelled various sequence diagrams of the system to add to its documentation.}
+  \item
+    \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Present}
+    \begin{itemize}
+      \resitem{Ported Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint.}
+      \resitem{Solved major critical crashes and refactored major portions of the codebase to increase the reliability of the system.}
+      \resitem{Converted the client from a console application to a Win32 service.}
+      \resitem{Created Windows Installer (MSI) merge modules and installers using InstallShield along with build automation scripts.}
+      \resitem{Modelled various sequence diagrams of the system to add to its documentation.}
+      \resitem{Worked in an agile team using Scrum methodologies.}
+    \end{itemize}
+  \item
+    \ressubheading{Persistent Systems}{Pune, India}{Academic Intern}{Aug. 2016 - Dec. 2016}
+    \begin{itemize}
+      \resitem{Designed and implemented an agent-less approach for an end point detection and response solution, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
+      \resitem{Increased query throughput by nearly 3x by implementing a thread safe cache to reduce authentication requests.}
+      \resitem{Wrote a Windows DLL in \CC to interface COM/DCOM functions over to Java using the Java Native Interface.}
+      \resitem{Implemented various queries such as security, system alerts, hardware details, running processes, etc. as per the design specification.}
+    \end{itemize}
+  \item
+    \ressubheading{Persistent Systems}{Pune, India}{Summer Intern}{Jun. 2015 - Aug. 2015}
+    \begin{itemize}
+      \resitem{Worked on reducing the lexical ambiguity and the global name space burden of Python 3.}
+      \resitem{Extended Python 3 by providing support for Devanagari numbers and various Unicode math characters.}
+      \resitem{The modified CPython source is capable of doing math in Devanagari numbers and supports math operators in Unicode like union, intersection, subset, etc.}
+    \end{itemize}
   \end{itemize}
-\item
-  \ressubheading{Persistent Systems}{Pune, India}{Academic Intern}{Aug. 2016 - Dec. 2016}
+  
+  \resheading{Education}
   \begin{itemize}
-    \resitem{Designed and implemented an agent-less approach for an end point detection and response solution, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
-    \resitem{Wrote a Windows DLL in \CC to interface COM/DCOM functions over to Java using the Java Native Interface.}
-    \resitem{Implemented various queries such as security, system alerts, hardware details, running processes, etc. as per the design specification.}
+  \item
+    \ressubheading{Vishwakarma Institute of Technology}{Pune, India}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
+    \begin{itemize}
+      \resitem {Graduated 1\ts{st} Class with Distinction}
+      \resitem {Major Project: Grammar correction using a Recurrent Neural Network}
+      \resitem{Relevant Coursework: Design \& Analysis of Algorithms, Theory of Computation, Artificial Intelligence, Operating Systems, Distributed Computing, Business Intelligence}
+    \end{itemize}
+    \ifhighschool	
+  \item
+    \ressubheading{Delhi Public School}{Pune, India}{12th Grade CBSE}{May 2013}
+    \begin{itemize}
+      \resitem{Percentage: 76.4\%}
+    \end{itemize}
+  \item
+    \ressubheading{Delhi Public School}{Pune, India}{10th Grade CBSE}{May 2011}
+    \begin{itemize}
+      \resitem{CGPA: 8.6}
+    \end{itemize}
+    \fi
   \end{itemize}
-\item
-  \ressubheading{Persistent Systems}{Pune, India}{Summer Intern}{Jun. 2015 - Aug. 2015}
+  
+  \pagebreak
+  
+  \ifprojects
+  \resheading{Projects}
   \begin{itemize}
-    \resitem{Extended Python 3 by providing support for Devanagari numbers and various Unicode math characters.}
-    \resitem{The modified CPython source is capable of doing math in Devanagari numbers and supports math operators in Unicode like union, intersection, subset, etc.}
-    \resitem{Repo Link: github.com/rusimody/l10Python}
-  \end{itemize}
-\end{itemize}
-
-\resheading{Education}
-\begin{itemize}
-\item
-  \ressubheading{Vishwakarma Institute of Technology}{Pune, India}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
-  \begin{itemize}
-    \resitem{1\ts{st} Class with Distinction}
-    \resitem{Relevant Coursework: Design \& Analysis of Algorithms, Theory of Computation, Artificial Intelligence, Operating Systems, Distributed Computing}
-  \end{itemize}
-  \ifhighschool	
-\item
-  \ressubheading{Delhi Public School}{Pune, India}{12th Grade CBSE}{May 2013}
-  \begin{itemize}
-    \resitem{Percentage: 76.4\%}
-  \end{itemize}
-\item
-  \ressubheading{Delhi Public School}{Pune, India}{10th Grade CBSE}{May 2011}
-  \begin{itemize}
-    \resitem{CGPA: 8.6}
+  \item
+    \resprojectsubheading{Source Code Project Visualizer}{Sep. 2017}
+    \begin{itemize}
+      \resitem{A source code browser written in Python 3 that displays the structure of a C++ code base and its include dependencies in an interactive visual graph displayed using Javascript.}
+    \end{itemize}
+  \item
+    \resprojectsubheading{Text Amend}{May 2017}
+    \begin{itemize}
+      \resitem{An application that amends text using a recurrent neural network that can correct a subset of grammatical errors written in English. Written in Python using Google's TensorFlow library.}
+    \end{itemize}
+  \item
+    \resprojectsubheading{adnanshaikh.com}{Dec. 2016}
+    \begin{itemize}
+      \resitem{Built my website using HTML5 and JavaScript to emulate a terminal interface. Built the accompanying blog with Ghost and Buster.}
+    \end{itemize}
+  \item
+    \resprojectsubheading{Game Engine}{Jun. 2016 - Present}
+    \begin{itemize}
+      \resitem{Currently working on a game engine written in C++ using the OpenGL API. Supports the following features: free-roaming FPS camera, .obj object file loading, texture loading and phong lighting.}
+    \end{itemize}
+  \item
+    \resprojectsubheading{Genetic Image Re-creator}{May 2016}
+    \begin{itemize}
+      \resitem{The application recreates an image by generating a random population of images, each consisting of randomly transformed and colored triangles. Breeds the top 2 images closest to the source image to form a new population of images with random mutations following the process of genetic evolution. Implemented using the GTK+ toolkit and C.}
+    \end{itemize}
+  \item
+    \resprojectsubheading{Travelling Salesman Problem Solver Simulator}{Dec. 2015}
+    \begin{itemize}
+      \resitem{Written in Python 3, implemented various solutions: Dynamic Programming, nearest neighbor, heuristic algorithms namely 2-opt and 3-opt and interfaced them with the Tkinter GUI kit.}
+    \end{itemize}
   \end{itemize}
   \fi
-\end{itemize}
-
-\pagebreak
-
-\resheading{Projects}
-\begin{itemize}
-\item
-  \resprojectsubheading{Source Code Project Visualizer}{Sep. 2017}
+  
+  \ifskills
+  \resheading{Skills}
+  \begin{description}
+  \item[Languages:]
+    C/C{}\verb!++!, Java, Python, Bourne Shell
+  \item[Tools:]
+    MS Visual Studio, SVN, Git, Emacs, Make, Maven
+  \item[Miscellaneous:]
+    Great troubleshooting and debugging skills
+  \end{description}
+  \fi
+  
+  \ifleadership
+  \resheading{Organizations}
   \begin{itemize}
-    \resitem{A source code browser written in Python 3 that displays the structure of a C++ code base and its include dependencies in an interactive visual graph displayed using Javascript.}
+  \item
+    \ressubheading{Geekfest Pune}{Pune, India}{Co-founder}{Sep. 2014 - Present}
+    \begin{itemize}
+      \resitem{Co-founded an annual not-for-profit event to bring together creative people who share a passion for art, design, technology, literature, etc. to share well-formed ideas, interact and connect with each other.}
+      \resitem{More than 60 attendees in the first edition, followed by 110 attendees in its second year.}
+    \end{itemize}
+  \item
+    \ressubheading{AIESEC in Pune}{Pune, India}{Team Leader of Business Development}{Aug. 2014 - Jul. 2015}
+    \begin{itemize}
+      \resitem{Worked on gathering sponsorships for organizing an annual stakeholders\textquotesingle \ summit dubbed NEXUS’.}
+      \resitem{The event aimed towards bringing the clients and stakeholders of AIESEC in Pune to gather around to discourse the theme of the evening and network with each other.}
+      \resitem{Dealt with HR heads to help their organization hire globally competent \& requirement specific employees.}
+    \end{itemize}
   \end{itemize}
-\item
-  \resprojectsubheading{Text Amend}{May 2017}
-  \begin{itemize}
-    \resitem{An application that amends text using a recurrent neural network that can correct a subset of grammatical errors written in English. Written in Python using Google's TensorFlow library.}
-  \end{itemize}
-\item
-  \resprojectsubheading{adnanshaikh.com}{Dec. 2016}
-  \begin{itemize}
-    \resitem{Built my website using HTML5 and JavaScript to emulate a terminal interface. Built the accompanying blog with Ghost and Buster.}
-  \end{itemize}
-\item
-  \resprojectsubheading{Game Engine}{Jun. 2016 - Present}
-  \begin{itemize}
-    \resitem{Currently working on a game engine written in C++ using the OpenGL API. Supports the following features: free-roaming FPS camera, .obj object file loading, texture loading and phong lighting.}
-  \end{itemize}
-\item
-  \resprojectsubheading{Genetic Image Re-creator}{May 2016}
-  \begin{itemize}
-    \resitem{The application recreates an image by generating a random population of images, each consisting of randomly transformed and colored triangles. Breeds the top 2 images closest to the source image to form a new population of images with random mutations following the process of genetic evolution. Implemented using the GTK+ toolkit and C.}
-  \end{itemize}
-\item
-  \resprojectsubheading{Travelling Salesman Problem Solver Simulator}{Dec. 2015}
-  \begin{itemize}
-    \resitem{Written in Python 3, implemented various solutions: Dynamic Programming, nearest neighbor, heuristic algorithms namely 2-opt and 3-opt and interfaced them with the Tkinter GUI kit.}
-  \end{itemize}
-\end{itemize}
-
-\ifskills
-\resheading{Skills}
-\begin{description}
-\item[Languages:]
-  C/C{}\verb!++!, Java, Python, Bourne Shell
-\item[Tools:]
-  MS Visual Studio, SVN, Git, Emacs, Make, Maven
-\item[Miscellaneous:]
-  Great troubleshooting and debugging skills
-\end{description}
-\fi
-
-\ifleadership
-\resheading{Organizations}
-\begin{itemize}
-\item
-  \ressubheading{Geekfest Pune}{Pune, India}{Co-founder}{Sep. 2014 - Present}
-  \begin{itemize}
-    \resitem{Co-founded an annual not-for-profit event to bring together creative people who share a passion for art, design, technology, literature, etc. to share well-formed ideas, interact and connect with each other.}
-    \resitem{More than 60 attendees in the first edition, followed by 110 attendees in its second year.}
-  \end{itemize}
-\item
-  \ressubheading{AIESEC in Pune}{Pune, India}{Team Leader of Business Development}{Aug. 2014 - Jul. 2015}
-  \begin{itemize}
-    \resitem{Worked on gathering sponsorships for organizing an annual stakeholders\textquotesingle \ summit dubbed NEXUS’.}
-    \resitem{The event aimed towards bringing the clients and stakeholders of AIESEC in Pune to gather around to discourse the theme of the evening and network with each other.}
-    \resitem{Dealt with HR heads to help their organization hire globally competent \& requirement specific employees.}
-  \end{itemize}
-\end{itemize}
-\fi
-
-\end{document}
+  \fi
+  
+  \end{document}
