Removed address and updated Persistent end date

--- a/resume.tex
+++ b/resume.tex
@@ -79,20 +79,18 @@
     \textbf{\Large Adnan Shaikh}
   \end{center}
   
-  \begin{tabular*}{7.5in}{l@{\extracolsep{\fill}}r}
-  
-    C-1/904, Bramha Majestic & +91 9960 838 580 (mobile)\\
-    NIBM Road, Kondhwa & adnan.shaikh1806@gmail.com \\
-    Pune, MH, India & June 18, 1995\\
-    411048 & www.adnanshaikh.com\\
-  \end{tabular*}
+  \begin{center}
+    adnan.shaikh1806@gmail.com \vert +91~9960~838~580\\
+    www.adnanshaikh.com\\
+    Pune, India \\
+  \end{center}
   
   \vspace{0.1in}
   
   \resheading{Work Experience}
   \begin{itemize}
   \item
-    \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Present}
+    \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Mar. 2019}
     \begin{itemize}
       \resitem{Ported Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint.}
       \resitem{Solved major critical crashes and refactored major portions of the codebase to increase the reliability of the system.}
