Job hunting update Updated phone number, location Added UTD

--- a/resume.tex
+++ b/resume.tex
@@ -80,9 +80,9 @@
   \end{center}
   
   \begin{center}
-    adnan.shaikh1806@gmail.com \vert +91~9960~838~580\\
+    adnan.shaikh1806@gmail.com \vert +1~(469)~920~1534\\
     www.adnanshaikh.com\\
-    Pune, India \\
+    Dallas, TX \\
   \end{center}
   
   \vspace{0.1in}
@@ -97,7 +97,7 @@
       \resitem{Converted the client from a console application to a Win32 service.}
       \resitem{Created Windows Installer (MSI) merge modules and installers using InstallShield along with build automation scripts.}
       \resitem{Modelled various sequence diagrams of the system to add to its documentation.}
-      \resitem{Worked in an agile team using Scrum methodologies.}
+      %\resitem{Worked in an agile team using Scrum methodologies.}
     \end{itemize}
   \item
     \ressubheading{Persistent Systems}{Pune, India}{Academic Intern}{Aug. 2016 - Dec. 2016}
@@ -119,10 +119,14 @@
   \resheading{Education}
   \begin{itemize}
   \item
+    \ressubheading{University of Texas at Dallas}{Dallas, TX}{Master of Science in Computer Science}{Aug. 2019 - Present}
+    \begin{itemize}
+    \end{itemize}
+  \item
     \ressubheading{Vishwakarma Institute of Technology}{Pune, India}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
     \begin{itemize}
       \resitem {Graduated 1\ts{st} Class with Distinction}
-      \resitem {Major Project: Grammar correction using a Recurrent Neural Network}
+      \resitem {Final Year Project: Grammar correction using a Recurrent Neural Network}
       \resitem{Relevant Coursework: Design \& Analysis of Algorithms, Theory of Computation, Artificial Intelligence, Operating Systems, Distributed Computing, Business Intelligence}
     \end{itemize}
     \ifhighschool	
