--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,7 @@
   \usepackage[empty]{fullpage}
   \usepackage{color}
   \usepackage[document]{ragged2e}
+  \usepackage{hyperref}
   \usepackage{textcomp}
   \definecolor{mygrey}{gray}{0.80}
   \raggedbottom
@@ -76,33 +77,31 @@
   \begin{document}
   
   \begin{center}
-    \textbf{\Large Adnan Shaikh}
-  \end{center}
-  
-  \begin{center}
-    adnan.shaikh1806@gmail.com \vert +1~(469)~920~1534\\
-    www.adnanshaikh.com\\
+    \textbf{\Large Adnan Shaikh}\\
+    
+    \vspace{0.05in}
+    
+    \href{mailto:adnan.shaikh1806@gmail.com}{adnan.shaikh1806@gmail.com} \rule[-0.4ex]{0.08ex}{1.0em} +1~(469)~920~1534\\
+    \href{https://www.adnanshaikh.com}{www.adnanshaikh.com} \rule[-0.4ex]{0.08ex}{1.0em} \href{https://github.com/adyshake}{github.com/adyshake}\\
     Dallas, TX \\
   \end{center}
-  
-  \vspace{0.1in}
   
   \resheading{Work Experience}
   \begin{itemize}
   \item
     \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Mar. 2019}
     \begin{itemize}
-      \resitem{Ported Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint.}
+      \resitem{Ported Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint for low-spec ATMs.}
       \resitem{Solved major critical crashes and refactored major portions of the codebase to increase the reliability of the system.}
       \resitem{Converted the client from a console application to a Win32 service.}
       \resitem{Created Windows Installer (MSI) merge modules and installers using InstallShield along with build automation scripts.}
-      \resitem{Modelled various sequence diagrams of the system to add to its documentation.}
+      %\resitem{Modelled various sequence diagrams of the system to add to its documentation.}
       %\resitem{Worked in an agile team using Scrum methodologies.}
     \end{itemize}
   \item
     \ressubheading{Persistent Systems}{Pune, India}{Academic Intern}{Aug. 2016 - Dec. 2016}
     \begin{itemize}
-      \resitem{Designed and implemented an agent-less approach for an end point detection and response solution, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
+      \resitem{Implemented an agent-less approach for an end point detection and response solution, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
       \resitem{Increased query throughput by nearly 3x by implementing a thread safe cache to reduce authentication requests.}
       \resitem{Wrote a Windows DLL in \CC to interface COM/DCOM functions over to Java using the Java Native Interface.}
       \resitem{Implemented various queries such as security, system alerts, hardware details, running processes, etc. as per the design specification.}
@@ -119,7 +118,7 @@
   \resheading{Education}
   \begin{itemize}
   \item
-    \ressubheading{University of Texas at Dallas}{Dallas, TX}{Master of Science in Computer Science}{Aug. 2019 - Present}
+    \ressubheading{University of Texas at Dallas}{Dallas, TX}{Master of Science in Computer Science}{Aug. 2019 - Expected May 2021}
     \begin{itemize}
     \end{itemize}
   \item
