Added grad school GPA

--- a/resume.tex
+++ b/resume.tex
@@ -120,11 +120,12 @@
   \item
     \ressubheading{University of Texas at Dallas}{Dallas, TX}{Master of Science in Computer Science}{Aug. 2019 - Expected May 2021}
     \begin{itemize}
+      \resitem {GPA: 3.67/4.00}
     \end{itemize}
   \item
     \ressubheading{Vishwakarma Institute of Technology}{Pune, India}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
     \begin{itemize}
-      \resitem {Graduated 1\ts{st} Class with Distinction}
+      \resitem {Graduated 1\ts{st} Class with Distinction. GPA: 8.03/10}
       \resitem {Final Year Project: Grammar correction using a Recurrent Neural Network}
       \resitem{Relevant Coursework: Design \& Analysis of Algorithms, Theory of Computation, Artificial Intelligence, Operating Systems, Distributed Computing, Business Intelligence}
     \end{itemize}
