--- a/resume.tex
+++ b/resume.tex
@@ -1,109 +1,177 @@
 \documentclass[letterpaper,12pt]{article}
 
-  %-----------------------------------------------------------
+\usepackage{latexsym}
+\usepackage[empty]{fullpage}
+\usepackage{titlesec}
+\usepackage{marvosym}
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{verbatim}
+\usepackage{enumitem}
+\usepackage[hidelinks]{hyperref}
+\usepackage{fancyhdr}
+\usepackage[english]{babel}
+\usepackage{tabularx}
 
-  \usepackage[empty]{fullpage}
-  \usepackage{color}
-  \usepackage[document]{ragged2e}
-  \usepackage{hyperref}
-  \usepackage{textcomp}
-  \definecolor{mygrey}{gray}{0.80}
-  \raggedbottom
-  \raggedright
-  \setlength{\tabcolsep}{0in}
-  
-  % Adjust margins to 0.5in on all sides
-  \addtolength{\oddsidemargin}{-0.5in}
-  \addtolength{\evensidemargin}{-0.5in}
-  \addtolength{\textwidth}{1.0in}
-  \addtolength{\topmargin}{-0.5in}
-  \addtolength{\textheight}{1.0in}
-  
-  %-----------------------------------------------------------
+\pagestyle{fancy}
+\fancyhf{} % clear all header and footer fields
+\fancyfoot{}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
 
-  %Custom commands
-  \newcommand{\ts}{\textsuperscript}
-  \def\CC{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++ }}}
-  \newcommand{\resitem}[1]{\item #1 \vspace{-2pt}}
-  \newcommand{\resheading}[1]{{\large \colorbox{mygrey}{\begin{minipage}{0.989\textwidth}{\textbf{#1 \vphantom{p\^{E}}}}\end{minipage}}}}
-  \newcommand{\ressubheading}[4]{
-    \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
+% Adjust margins
+\addtolength{\oddsidemargin}{-0.5in}
+\addtolength{\evensidemargin}{-0.5in}
+\addtolength{\textwidth}{1in}
+\addtolength{\topmargin}{-.5in}
+\addtolength{\textheight}{1.0in}
+
+\urlstyle{same}
+
+\raggedbottom
+\raggedright
+\setlength{\tabcolsep}{0in}
+
+% Sections formatting
+\titleformat{\section}{
+  \vspace{-4pt}\scshape\raggedright\large
+}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
+
+%-------------------------
+% Custom commands
+\newcommand{\resumeItem}[2]{
+  \item\small{
+    \textbf{#1}{: #2 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\resumeSubheading}[4]{
+  \vspace{-1pt}\item
+    \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
+    %   \textit{\small#3} & \textit{\small #4} \\
       \textit{#3} & \textit{#4} \\
-    \end{tabular*}\vspace{-6pt}}
-  \newcommand{\resprojectsubheading}[2]{
-    \begin{tabular*}{7.0in}{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & \textit{#2} \\
-    \end{tabular*}\vspace{-6pt}}
-  
-  %-----------------------------------------------------------
-  
+    \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\resumeSubSubheading}[2]{
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+    %   \textit{\small#1} & \textit{\small #2} \\
+      \textit{#1} & \textit{#2} \\
+    \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
+
+\renewcommand{\labelitemii}{$\circ$}
+
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+
+\def\CC{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++ }}}
+
+%-------------------------------------------
+%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \begin{document}
-  
-  \begin{center}
-    \textbf{\Large Adnan Shaikh}\\
-    
-    \vspace{0.05in}
-    
-    \href{mailto:adnan.shaikh1806@gmail.com}{adnan.shaikh1806@gmail.com} \rule[-0.4ex]{0.08ex}{1.0em} +1~(469)~920~1534\\
-    \href{https://www.adnanshaikh.com}{www.adnanshaikh.com} \rule[-0.4ex]{0.08ex}{1.0em} \href{https://github.com/adyshake}{github.com/adyshake}\\
-    Dallas, TX \\
-  \end{center}
 
-  \resheading{Education}
-  \begin{itemize}
-  \item
-    \ressubheading{The University of Texas at Dallas}{Dallas, TX}{Master of Science in Computer Science}{Aug. 2019 - Expected May 2021}
-    \begin{itemize}
-      \resitem {GPA: 3.67/4.00}
-      \resitem{Relevant Coursework: Design \& Analysis of Algorithms, Cloud Computing, Machine Learning, Big Data Management, Computer Vision}
-    \end{itemize}
-  \item
-    \ressubheading{Vishwakarma Institute of Technology}{Pune, India}{Bachelor of Technology in Computer Engineering}{Jul. 2013 - May 2017}
-    \begin{itemize}
-      \resitem {GPA: 8.03/10, Graduated 1\ts{st} Class with Distinction}
-      \resitem {Final Year Project: Grammar correction using a Recurrent Neural Network}
-      % \resitem{Relevant Coursework: Artificial Intelligence, Operating Systems, Distributed Computing, Business Intelligence}
-    \end{itemize}
-  \end{itemize}
+%----------HEADING-----------------
+\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
+  \textbf{\href{https://adnanshaikh.com/}{\Large Adnan Shaikh}} & Email : \href{mailto:adnan.shaikh1806@gmail.com}{adnan.shaikh1806@gmail.com}\\
+  \href{https://adnanshaikh.com/}{https://www.adnanshaikh.com} & Mobile : +1-469-920-1534 \\
+\end{tabular*}
 
-  \resheading{Work Experience}
-  \begin{itemize}
-  % \item
-  %   \ressubheading{Amazon}{Seattle, WA}{Software Development Engineering Intern}{May. 2020 - Aug. 2020}
-  %   \begin{itemize}
-  %     \resitem{Worked on bringing down the patriarchy.}
-  % \end{itemize}
-  % \item
-  %   \ressubheading{Freelance Software Engineer}{Delhi, India}{Full Stack Developer}{Mar. 2019 - Aug. 2019}
-  %   \begin{itemize}
-  %     \resitem{Developed a proof of concept Android app for a client
-  %     that consisted of an SQLite, AWS and Amazon AppSync backend. Built
-  %     entirely in Kotlin.}
-  % \end{itemize}
-  \item
-    \ressubheading{Persistent Systems}{Pune, India}{Software Engineer}{Jul. 2017 - Mar. 2019}
-    \begin{itemize}
-      \resitem{Ported Sentient's agent-less client from Java to \CC to improve runtime performance and reduce its memory footprint for low-spec ATMs.}
-      \resitem{Solved major critical crashes and refactored major portions of the codebase to increase the reliability of the system.}
-      \resitem{Converted the client from a console application to a Win32 service.}
-      \resitem{Created Windows Installer (MSI) merge modules and installers using InstallShield along with build automation scripts.}
-    \end{itemize}
-  \item
-    \ressubheading{Persistent Systems}{Pune, India}{Academic Intern}{Aug. 2016 - Dec. 2016}
-    \begin{itemize}
-      \resitem{Implemented an agent-less approach for an end point detection and response solution, in order to get the real time status of nearly 10,000 cross platform enterprise endpoints.}
-      \resitem{Increased query throughput by nearly 3x by implementing a thread safe cache to reduce authentication requests.}
-      \resitem{Wrote a Windows DLL in \CC to interface COM/DCOM functions over to Java using the Java Native Interface.}
-      \resitem{Implemented various queries such as security, system alerts, hardware details, running processes, etc. as per the design specification.}
-    \end{itemize}
-  \item
-    \ressubheading{Persistent Systems}{Pune, India}{Summer Intern}{Jun. 2015 - Aug. 2015}
-    \begin{itemize}
-      \resitem{Worked on reducing the lexical ambiguity and the global name space burden of Python 3.}
-      \resitem{Extended Python 3 by providing support for Devanagari numbers and various Unicode math characters.}
-      \resitem{The modified CPython source is capable of doing math in Devanagari numbers and supports math operators in Unicode like union, intersection, subset, etc.}
-    \end{itemize}
-  \end{itemize}
 
+%-----------EDUCATION-----------------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {The University of Texas at Dallas}{Dallas, TX}
+      {Master of Science in Computer Science;  GPA: 3.80}{Aug. 2019 -- Expected May 2021}
+    \resumeSubheading
+      {Vishwakarma Institute of Technology}{Pune, India}
+      {Bachelor of Technology in Computer Engineering;  GPA: 8.03/10}{Jul. 2013 -- May 2017}
+  \resumeSubHeadingListEnd
+
+
+%-----------EXPERIENCE-----------------
+\section{Experience}
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {Amazon}{Seattle, WA}
+      {Software Engineer Intern}{May 2020 - Aug. 2020}
+      % \resumeItemListStart
+      %   \resumeItem{Credit Card}
+      %     {Worked on the Amazon Business Payments team  working on features from the BPP team’s tech roadmap.}
+      %   \resumeItem{Patriarchy}
+      %     {Took down the patriarchy from within.}
+      % \resumeItemListEnd
+      
+% --------Multiple Positions Heading------------
+
+%    \resumeSubHeadingListEnd
+%-------------------------------------------
+
+    \resumeSubheading
+      {Persistent Systems}{Pune, India}
+      {Software Engineer}{Jul. 2017 - Mar. 2019}
+      \resumeItemListStart
+        \resumeItem{Win32 Service}
+          {Ported an agent-less client from Java to \CC as a Win32 service to improve runtime performance and reduce its memory footprint for low-spec ATMs.}
+        \resumeItem{Updater}
+          {Implemented a separate updater service to handle seamless background updates of the main application.}
+        \resumeItem{Reliability}
+          {Solved major critical crashes and refactored major portions of the codebase to increase the reliability of the system.}
+        \resumeItem{Installer}
+          {Created Windows Installer (MSI) merge modules and installers using InstallShield along with build automation scripts.}
+      \resumeItemListEnd
+
+      \resumeSubSubheading
+      {Academic Intern}{Aug. 2016 - Dec. 2016}
+      \resumeItemListStart
+         \resumeItem{Backend Stack}
+           {Implemented an agent-less approach using Windows Managment Instrumentation, in order to get the real time status of nearly 10,000 cross-platform enterprise endpoints.}
+         \resumeItem{Performance}
+           {Increased query throughput by nearly 3x by implementing a thread safe cache to reduce authentication requests.}
+         \resumeItem{DLL}
+           {Wrote a Windows DLL to interface COM/DCOM WMI functions over to Java using the Java Native Interface.}
+      \resumeItemListEnd
+
+      \resumeSubSubheading
+      {Summer Intern}{Jun. 2015 - Aug. 2015}
+      \resumeItemListStart
+         \resumeItem{Compiler}
+           {Extended Python 3's lanugage support by parsing Devanagari numbers and various Unicode math operators like union, intersection, subset, etc.}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
+
+%-----------PROJECTS-----------------
+\section{Projects}
+  \resumeSubHeadingListStart
+    \resumeSubItem{Spending Tracker}
+      {Personal spending tracker combining data from various OFX feeds and Splitwise using Python, React, NodeJS and Machine Learning for transaction classification.}
+    \resumeSubItem{Xposed Module}
+      {An Xposed module written in Java to disable the explore feed of Instagram by reverse engineering the APK.}
+    \resumeSubItem{Freelance Android App}
+      {Developed a proof-of-concept Android app for a client that consisted of an SQLite, GraphQL, AWS and Amazon AppSync backend. Built entirely in Kotlin.}
+    \resumeSubItem{Game Engine}
+      {Ongoing development of a personal 3D engine to practice graphics techniques. Supports forward rendering, shadow maps and SSAO. Built using \CC14 and OpenGL 3.3}
+  \resumeSubHeadingListEnd
+
+%--------PROGRAMMING SKILLS------------
+\section{Programming Skills}
+ \resumeSubHeadingListStart
+   \item{
+     \textbf{Languages}{: Python, Java, C++, Javascript, SQL}
+     \hfill
+     \textbf{Technologies}{: AWS, Play, React, Kafka, OpenGL}
+   }
+ \resumeSubHeadingListEnd
+
+%-------------------------------------------
 \end{document}
