--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,7 @@
       \resumeItemListEnd
 
       \resumeSubSubheading
-      {Academic Intern}{Aug. 2016 - Dec. 2016}
+      {Software Engineer Intern}{Aug. 2016 - Dec. 2016}
       \resumeItemListStart
          \resumeItem{Backend Stack}
            {Implemented an agent-less approach using Windows Managment Instrumentation, in order to get the real time status of nearly 10,000 cross-platform enterprise endpoints.}
@@ -141,7 +141,7 @@
       \resumeItemListEnd
 
       \resumeSubSubheading
-      {Summer Intern}{Jun. 2015 - Aug. 2015}
+      {Software Engineer Intern}{Jun. 2015 - Aug. 2015}
       \resumeItemListStart
          \resumeItem{Compiler}
            {Extended Python 3's lanugage support by parsing Devanagari numbers and various Unicode math operators like union, intersection, subset, etc.}
