--- a/resume.tex
+++ b/resume.tex
@@ -133,9 +133,9 @@
       {Software Engineer Intern}{Aug. 2016 - Dec. 2016}
       \resumeItemListStart
          \resumeItem{Backend Stack}
-           {Implemented an agent-less approach using Windows Managment Instrumentation, in order to get the real time status of nearly 10,000 cross-platform enterprise endpoints.}
+           {Implemented an agent-less approach using Windows Management Instrumentation, in order to get the real-time status of nearly 10,000 cross-platform enterprise endpoints.}
          \resumeItem{Performance}
-           {Increased query throughput by nearly 3x by implementing a thread safe cache to reduce authentication requests.}
+           {Increased query throughput by nearly 3x by implementing a thread-safe cache to reduce authentication requests.}
          \resumeItem{DLL}
            {Wrote a Windows DLL to interface COM/DCOM WMI functions over to Java using the Java Native Interface.}
       \resumeItemListEnd
@@ -144,7 +144,7 @@
       {Software Engineer Intern}{Jun. 2015 - Aug. 2015}
       \resumeItemListStart
          \resumeItem{Compiler}
-           {Extended Python 3's lanugage support by parsing Devanagari numbers and various Unicode math operators like union, intersection, subset, etc.}
+           {Extended Python 3's language support by parsing Devanagari numbers and various Unicode math operators like union, intersection, subset, etc.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
