Fix spelling mistakes

--- a/resume.tex
+++ b/resume.tex
@@ -106,12 +106,12 @@
       \resumeItemListStart
         \resumeItem{Migrate to AWS}
           {Migrated serving the frontend of an existing tightly coupled monolithic
-          service written with SpringMVC and moved it to AWS using S3, Amplify and
+          service written with SpringMVC and moved it to AWS using S3, Amplify, and
           CloudFront. This decoupled frontend allowed our team to launch our product
           more effectively in multiple marketplaces.}
         \resumeItem {CI/CD}
-          {Set up a continous integration/depolyment solution on AWS
-          using CDK, CodeCommit, CodeBuild, CodePipeline and Lambda along with metrics to
+          {Set up a continuous  integration/deployment solution on AWS
+          using CDK, CodeCommit, CodeBuild, CodePipeline, and Lambda along with metrics to
           track API usage and alarm on-calls in case of excessive errors.}
       \resumeItemListEnd
       
