Commented phone number

--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{https://adnanshaikh.com/}{\Large Adnan Shaikh}} & Email : \href{mailto:adnan.shaikh1806@gmail.com}{adnan.shaikh1806@gmail.com}\\
-  \href{https://adnanshaikh.com/}{https://www.adnanshaikh.com} & Mobile : +1-469-920-1534 \\
+  \href{https://adnanshaikh.com/}{https://www.adnanshaikh.com} %& Mobile : +1-469-920-1534 \\
 \end{tabular*}
 
 
